Fixed a bunch of BS