@@ -16,9 +16,22 @@ public class Puzzle {
         return steps;
     }
 
+    public String getFirst() {
+        return steps.get(0);
+    }
+
+    public String getLast() {
+        return steps.get(steps.size() - 1);
+    }
+
     public boolean equals(Puzzle other) {
-        ArrayList<String> otherSteps = other.getSteps();
-        return (steps.get(0).equals(otherSteps.get(0))) && (steps.get(steps.size() - 1).equals(otherSteps.get(otherSteps.size() - 1)));
+        return (getFirst().equals(other.getFirst()) && (getLast().equals(other.getLast()))) ||
+               (getFirst().equals(other.getLast()) && (getLast().equals(other.getFirst())));
+    }
+
+    @Override
+    public int hashCode() {
+        return (getFirst() + getLast()).hashCode();
     }
 
     public int getDifficulty() {
